Use File and File.Path instead of String to decribe files